<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_history"
            android:title="@string/menu_purchase_history" />
        <item
            android:id="@+id/nav_calendar"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_change_password"
            android:title="@string/menu_change_password" />
        <item
            android:id="@+id/nav_login"
            android:title="@string/menu_login" />
    </group>


</menu>
